--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "node dist/server.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon --exec ts-node src/server.ts",
+    "start:prod": "cross-env NODE_ENV=production node dist/server.js",
     "build": "tsc",
-    "dev": "nodemon --watch src --exec ts-node src/server.ts",  
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gal & Or & Yoni & Oriya",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
