--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "cross-env NODE_ENV=development nodemon --exec ts-node src/server.ts",
     "start:prod": "cross-env NODE_ENV=production node dist/server.js",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=development jest"
   },
   "author": "Gal & Or & Yoni & Oriya",
   "license": "ISC",
@@ -16,14 +16,14 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express-validator": "^7.2.0",
-    "multer": "^1.4.5-lts.1",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.0",
     "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0"
@@ -32,12 +32,12 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.1",
-    "@types/supertest": "^6.0.2",
-    "@types/jsonwebtoken": "^9.0.7",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth2": "^0.1.10",
+    "@types/supertest": "^6.0.2",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
