--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.0.5",
+    "node-fetch": "^2.7.0",
     "node-geocoder": "^4.4.1",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
